export const snapshot = {};

snapshot[`write - export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - export.ts 2`] = `
[
  'export { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
',
]
`;

snapshot[`write - lockfile_not_importable/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 23,
              line: 0,
            },
            start: {
              character: 7,
              line: 0,
            },
          },
          specifier: "std/version.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/version.ts",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "import_map",
  },
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/version.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "lockfile",
  },
]
`;

snapshot[`write - lockfile_not_importable/mod.ts 2`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@0.218.0/"
  }
}
',
  '{
  "version": "3",
  "remote": {
    "https://deno.land/std@0.218.0/version.ts": "cfb73e2f2b628978b2b70585b941c5ef5ccbf1dc06e76967206115c74ecfce49"
  }
}
',
]
`;

snapshot[`write - jsr_with_path_in_import_map/deno.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@std/testing@0.210.0",
        },
        from: {
          name: "@std/testing",
          path: "",
          protocol: "jsr:",
          version: "0.210.0",
        },
        map: {
          key: "@std/testing",
          resolved: "jsr:@std/testing@0.210.0",
        },
        to: {
          name: "@std/testing",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - jsr_with_path_in_import_map/deno.json 2`] = `
[
  '{
  "imports": {
    "@std/testing": "jsr:@std/testing@123.456.789"
  }
}
',
]
`;

snapshot[`write - jsr_with_path_in_import_map/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 43,
              line: 0,
            },
            start: {
              character: 25,
              line: 0,
            },
          },
          specifier: "@std/testing/bdd",
        },
        from: {
          name: "@std/testing",
          path: "",
          protocol: "jsr:",
          version: "0.210.0",
        },
        map: {
          key: "@std/testing",
          resolved: "jsr:/@std/testing@0.210.0/bdd",
        },
        to: {
          name: "@std/testing",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - jsr_with_path_in_import_map/mod.ts 2`] = `
[
  '{
  "imports": {
    "@std/testing": "jsr:@std/testing@123.456.789"
  }
}
',
]
`;

snapshot[`write - multiple_imports.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 52,
              line: 3,
            },
            start: {
              character: 30,
              line: 3,
            },
          },
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: undefined,
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 2,
            },
            start: {
              character: 18,
              line: 2,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - multiple_imports.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import emoji from "npm:node-emoji@123.456.789";
import { printProgress } from "jsr:@luca/flag@123.456.789";
',
]
`;

snapshot[`write - import_map_referred/import_map.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        from: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.17.0",
        },
        map: {
          key: "dax",
          resolved: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        to: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map_referred/import_map.json 2`] = `
[
  '{
  "imports": {
    "dax": "https://deno.land/x/dax@123.456.789/mod.ts"
  }
}
',
]
`;

snapshot[`write - import_map_referred/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 19,
              line: 0,
            },
            start: {
              character: 14,
              line: 0,
            },
          },
          specifier: "dax",
        },
        from: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.17.0",
        },
        map: {
          key: "dax",
          resolved: "https://deno.land/x/dax@0.17.0/mod.ts",
        },
        to: {
          name: "deno.land/x/dax",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map_referred/mod.ts 2`] = `
[
  '{
  "imports": {
    "dax": "https://deno.land/x/dax@123.456.789/mod.ts"
  }
}
',
]
`;

snapshot[`write - updated_import_and_outdated_export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 1,
            },
            start: {
              character: 29,
              line: 1,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - updated_import_and_outdated_export.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
export { assertEquals } from "https://deno.land/std@0.218.0/assert/assert_equals.ts";
',
]
`;

snapshot[`write - import_map/deno.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@2.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map/deno.json 2`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@0.218.0/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    "/": "./"
  }
}
',
]
`;

snapshot[`write - import_map/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 36,
              line: 3,
            },
            start: {
              character: 30,
              line: 3,
            },
          },
          specifier: "flag",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 38,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "std/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/assert.ts",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "deno_graph",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 36,
              line: 2,
            },
            start: {
              character: 24,
              line: 2,
            },
          },
          specifier: "node-emoji",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@2.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - import_map/mod.ts 2`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@0.218.0/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    "/": "./"
  }
}
',
]
`;

snapshot[`write - npm.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 0,
            },
            start: {
              character: 18,
              line: 0,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - npm.ts 2`] = `
[
  'import emoji from "npm:node-emoji@123.456.789";
import chalk from "npm:chalk@5";
import express from "npm:express@^4.17";
',
]
`;

snapshot[`write - import_and_export.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import_and_export.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
export { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
',
]
`;

snapshot[`write - import_map_no_resolve/deno.json 1`] = `[]`;

snapshot[`write - import_map_no_resolve/deno.json 2`] = `[]`;

snapshot[`write - import_map_no_resolve/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import_map_no_resolve/mod.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
',
]
`;

snapshot[`write - relative_import/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - relative_import/mod.ts 2`] = `
[
  'export { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
',
]
`;

snapshot[`write - lockfile/deno.json 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/bytes",
          resolved: "https://deno.land/std@0.200.0/bytes/copy.ts",
        },
        to: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "import_map",
  },
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@core/match@0.1.x",
        },
        from: {
          name: "@core/match",
          path: "",
          protocol: "jsr:",
          version: "0.1.0",
        },
        map: undefined,
        to: {
          name: "@core/match",
          path: "",
          protocol: "jsr:",
          version: "0.1.9",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:hono@^3",
        },
        from: {
          name: "hono",
          path: "",
          protocol: "npm:",
          version: "3.0.0",
        },
        map: undefined,
        to: {
          name: "hono",
          path: "",
          protocol: "npm:",
          version: "3.12.12",
        },
      },
    ],
    kind: "lockfile",
  },
]
`;

snapshot[`write - lockfile/deno.json 2`] = `
[
  '{
  "imports": {
    "std/bytes": "https://deno.land/std@0.218.0/bytes/copy.ts",
    "hono": "npm:hono@^3",
    "@core/match": "jsr:@core/match@0.1.x"
  }
}
',
  '{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@core/match@0.1.x": "jsr:@core/match@0.1.9",
      "npm:hono@^3": "npm:hono@3.12.12",
      "npm:ts-toolbelt@9.6.0": "npm:ts-toolbelt@9.6.0"
    },
    "jsr": {
      "@core/match@0.1.9": {
        "integrity": "ceff06cf40212bb720925972a4405bef373efe768690b344ac4fd7ca7189f746",
        "dependencies": [
          "npm:ts-toolbelt@9.6.0"
        ]
      }
    },
    "npm": {
      "hono@3.12.12": {
        "integrity": "sha512-5IAMJOXfpA5nT+K0MNjClchzz0IhBHs2Szl7WFAhrFOsbtQsYmNynFyJRg/a3IPsmCfxcrf8txUGiNShXpK5Rg==",
        "dependencies": {}
      },
      "ts-toolbelt@9.6.0": {
        "integrity": "sha512-nsZd8ZeNUzukXPlJmTBwUAuABDe/9qtVDelJeT/qW0ow3ZS3BsQJtNkan1802aM9Uf68/Y8ljw86Hu0h5IUW3w==",
        "dependencies": {}
      }
    }
  },
  "remote": {
    "https://deno.land/std@0.218.0/bytes/copy.ts": "f29c03168853720dfe82eaa57793d0b9e3543ebfe5306684182f0f1e3bfd422a"
  },
  "workspace": {
    "dependencies": [
      "jsr:@core/match@0.1.x",
      "npm:hono@^3"
    ]
  }
}
',
]
`;

snapshot[`write - lockfile/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 32,
              line: 0,
            },
            start: {
              character: 21,
              line: 0,
            },
          },
          specifier: "std/bytes",
        },
        from: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/bytes",
          resolved: "https://deno.land/std@0.200.0/bytes/copy.ts",
        },
        to: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "import_map",
  },
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@core/match@0.1.x",
        },
        from: {
          name: "@core/match",
          path: "",
          protocol: "jsr:",
          version: "0.1.0",
        },
        map: undefined,
        to: {
          name: "@core/match",
          path: "",
          protocol: "jsr:",
          version: "0.1.9",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/bytes/copy.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/bytes/copy.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:hono@^3",
        },
        from: {
          name: "hono",
          path: "",
          protocol: "npm:",
          version: "3.0.0",
        },
        map: undefined,
        to: {
          name: "hono",
          path: "",
          protocol: "npm:",
          version: "3.12.12",
        },
      },
    ],
    kind: "lockfile",
  },
]
`;

snapshot[`write - lockfile/mod.ts 2`] = `
[
  '{
  "imports": {
    "std/bytes": "https://deno.land/std@0.218.0/bytes/copy.ts",
    "hono": "npm:hono@^3",
    "@core/match": "jsr:@core/match@0.1.x"
  }
}
',
  '{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@core/match@0.1.x": "jsr:@core/match@0.1.9",
      "npm:hono@^3": "npm:hono@3.12.12",
      "npm:ts-toolbelt@9.6.0": "npm:ts-toolbelt@9.6.0"
    },
    "jsr": {
      "@core/match@0.1.9": {
        "integrity": "ceff06cf40212bb720925972a4405bef373efe768690b344ac4fd7ca7189f746",
        "dependencies": [
          "npm:ts-toolbelt@9.6.0"
        ]
      }
    },
    "npm": {
      "hono@3.12.12": {
        "integrity": "sha512-5IAMJOXfpA5nT+K0MNjClchzz0IhBHs2Szl7WFAhrFOsbtQsYmNynFyJRg/a3IPsmCfxcrf8txUGiNShXpK5Rg==",
        "dependencies": {}
      },
      "ts-toolbelt@9.6.0": {
        "integrity": "sha512-nsZd8ZeNUzukXPlJmTBwUAuABDe/9qtVDelJeT/qW0ow3ZS3BsQJtNkan1802aM9Uf68/Y8ljw86Hu0h5IUW3w==",
        "dependencies": {}
      }
    }
  },
  "remote": {
    "https://deno.land/std@0.218.0/bytes/copy.ts": "f29c03168853720dfe82eaa57793d0b9e3543ebfe5306684182f0f1e3bfd422a"
  },
  "workspace": {
    "dependencies": [
      "jsr:@core/match@0.1.x",
      "npm:hono@^3"
    ]
  }
}
',
]
`;

snapshot[`write - jsonc/deno.jsonc 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: undefined,
          specifier: "jsr:@luca/flag@1.0.0",
        },
        from: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "1.0.0",
        },
        map: {
          key: "flag",
          resolved: "jsr:@luca/flag@1.0.0",
        },
        to: {
          name: "@luca/flag",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/std@0.200.0/",
        },
        from: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.200.0",
        },
        map: {
          key: "std/",
          resolved: "https://deno.land/std@0.200.0/",
        },
        to: {
          name: "deno.land/std",
          path: "/",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: {
          key: "deno_graph",
          resolved: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: undefined,
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: {
          key: "node-emoji",
          resolved: "npm:node-emoji@2.0.0",
        },
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "import_map",
  },
]
`;

snapshot[`write - jsonc/deno.jsonc 2`] = `
[
  '{
  "imports": {
    "std/": "https://deno.land/std@0.218.0/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "flag": "jsr:@luca/flag@123.456.789",
    // map root to the project root
    "/": "./"
  }
}
',
]
`;

snapshot[`write - updated_and_outdated.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 1,
            },
            start: {
              character: 29,
              line: 1,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - updated_and_outdated.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
import { assertEquals } from "https://deno.land/std@0.218.0/assert/assert_equals.ts";
',
]
`;

snapshot[`write - multiple_modules/mod.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 84,
              line: 0,
            },
            start: {
              character: 29,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert_equals.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 74,
              line: 1,
            },
            start: {
              character: 28,
              line: 1,
            },
          },
          specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
        },
        from: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "0.50.0",
        },
        map: undefined,
        to: {
          name: "deno.land/x/deno_graph",
          path: "/mod.ts",
          protocol: "https:",
          version: "123.456.789",
        },
      },
      {
        code: {
          span: {
            end: {
              character: 40,
              line: 2,
            },
            start: {
              character: 18,
              line: 2,
            },
          },
          specifier: "npm:node-emoji@2.0.0",
        },
        from: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "2.0.0",
        },
        map: undefined,
        to: {
          name: "node-emoji",
          path: "",
          protocol: "npm:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - multiple_modules/mod.ts 2`] = `
[
  'import { assertEquals } from "https://deno.land/std@0.218.0/assert/assert_equals.ts";
export const noop = () => {};
',
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import emoji from "npm:node-emoji@123.456.789";
import { noop } from "./lib.ts";
',
]
`;

snapshot[`write - import.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 71,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.200.0",
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - import.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
',
]
`;

snapshot[`write - unversioned.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 63,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "https://deno.land/std/assert/assert.ts",
        },
        from: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: undefined,
        },
        map: undefined,
        to: {
          name: "deno.land/std",
          path: "/assert/assert.ts",
          protocol: "https:",
          version: "0.218.0",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - unversioned.ts 2`] = `
[
  'import { assert } from "https://deno.land/std@0.218.0/assert/assert.ts";
',
]
`;

snapshot[`write - jsr.ts 1`] = `
[
  {
    dependencies: [
      {
        code: {
          span: {
            end: {
              character: 48,
              line: 0,
            },
            start: {
              character: 23,
              line: 0,
            },
          },
          specifier: "jsr:@std/assert@0.210.0",
        },
        from: {
          name: "@std/assert",
          path: "",
          protocol: "jsr:",
          version: "0.210.0",
        },
        map: undefined,
        to: {
          name: "@std/assert",
          path: "",
          protocol: "jsr:",
          version: "123.456.789",
        },
      },
    ],
    kind: "module",
  },
]
`;

snapshot[`write - jsr.ts 2`] = `
[
  'import { assert } from "jsr:@std/assert@123.456.789";
import { parse } from "jsr:@std/semver@^0.210.0";
',
]
`;
